fixed spacing and hire me button issue in home page

--- a/react-portfolio/src/pages/Home.scss
+++ b/react-portfolio/src/pages/Home.scss
@@ -9,12 +9,14 @@
   padding: 5px 20px;
   min-height: 100vh;
   box-sizing: border-box;
+  
 }
 
 .home-header {
   position: absolute;
-  top: 20px;
+  top: 10px;
   right: 20px;
+  
 
   .header-icon {
     width: 200px;
@@ -24,7 +26,7 @@
 }
 
 .photo-section {
-  
+    margin-top: -70px; 
 
   .profile-photo {
     width: 250px;
@@ -40,7 +42,7 @@
 }
 
 .text-section {
-  max-width: 1000px;
+  max-width: 1300px;
   padding: 0 10px;
 
   h1 {
@@ -70,7 +72,7 @@
 
 .button-group {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   margin-top: 10px;
   flex-wrap: wrap;
   justify-content: center;
@@ -79,7 +81,7 @@
     background-color: #30B0CA;
     color: #fff;
     font-size: 1.6rem;
-    padding: 12px 28px;
+    padding: 6px 12px;
     border: none;
     border-radius: 30px;
     font-weight: 600;
@@ -95,6 +97,16 @@
     }
   }
 }
+
+.hire-btn {
+  background-color: #1f3b5c;
+  color: #fff;
+
+  &:hover {
+    background-color: #304b6e;
+  }
+}
+
 
 /* ===== Responsive Fixes ===== */
 @media (max-width: 768px) {
